# iqdb-flat

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: flat_search.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v1.0.0.md
examples/: batch_and_stats.rs  filtered_search.rs  lifecycle.rs  metric_tour.rs  parallel_scan.rs  polymorphic.rs  quick_start.rs  recall_oracle.rs
src/: flat.rs  lib.rs  parallel.rs  topk.rs
tests/: c3_determinism.rs  correctness.rs  edge_cases.rs  error_hardening.rs  large_scan.rs  no_alloc.rs  parallel_equivalence.rs  proptest_invariants.rs  scale.rs  smoke.rs  ties.rs
