# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "iqdb-flat"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.87"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Brute-force exact nearest-neighbor search and recall ground truth - part of the iQDB family."

# Keywords (5 max)
keywords = [
    "nearest-neighbor",
    "vector-search",
    "index",
    "exact-search",
    "iqdb"
]

# Categories
categories = [
    "algorithms",
    "data-structures"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-flat"
repository    = "https://github.com/jamesgober/iqdb-flat"
documentation = "https://docs.rs/iqdb-flat"

# Authors
authors = [
    "James Gober <me@jamesgober.com>",
    "Matt Callahan <matthewcallahan01@icloud.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_flat"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = []
# Rayon-backed parallel distance scan. Off by default: the sequential
# path is the correctness baseline and the parallel path is proven
# byte-identical to it. Turn it on for large in-memory corpora.
parallel = ["dep:rayon"]


# DEPENDENCIES
# #################################
[dependencies]
# Shared iQDB vocabulary: VectorId, Metadata, Hit, SearchParams, DistanceMetric, IqdbError.
iqdb-types    = "1.0.0"
# The five distance kernels (SIMD where the target allows it).
iqdb-distance = "1.0.0"
# The Index / IndexCore traits this crate implements.
iqdb-index    = "1.0.0"
# Metadata pre-filter evaluation (closed-world semantics, validated depth/IN caps).
iqdb-filter   = "1.0.0"
# Optional parallel scan; the sequential path never touches rayon.
rayon         = { version = "1", optional = true }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"


# EXAMPLES
# #################################
# The parallel example needs the optional feature; the rest build by default.
[[example]]
name              = "parallel_scan"
required-features = ["parallel"]


# BENCHMARKS
# #################################
[[bench]]
name    = "flat_search"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
